--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     @apply font-extrabold text-4xl py-6;
   }
 }
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -20,6 +21,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --lightBlue : rgba(70,91,182);
+}
+
+*{
+
+font-family: 'Poppins', sans-serif;
 }
 
 a {
@@ -28,7 +36,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #282fb7;
 }
 #root {
   margin: 0;
@@ -62,20 +70,8 @@ button {
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+p{
+  font-size: 10px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
